--- a/test/Makefile
+++ b/test/Makefile
@@ -9,5 +9,8 @@ test_terrain_movility: terrain_movility_test.cpp ../src/fremen_movility.cpp
 test_path_node: path_node_test.cpp ../src/path_node.cpp ../src/block_position.cpp
 	g++ $(CFLAGS) -o path_node.test path_node_test.cpp ../src/path_node.cpp ../src/block_position.cpp
 
+test_terrain_map: terrain_map_test.cpp ../src/terrain_map.cpp ../src/block_position.cpp ../src/path_node.cpp ../src/fremen_movility.cpp
+	g++ $(CFLAGS) -o terrain_map.test terrain_map_test.cpp ../src/terrain_map.cpp ../src/block_position.cpp ../src/path_node.cpp ../src/fremen_movility.cpp
+
 clean:
-	rm -f core *.o block_position.test terrain_movility.test path_node.test
+	rm -f core *.o block_position.test terrain_movility.test path_node.test terrain_map.test
