Implemento el rifle de asalto Creo una clase Weapon puramente virtual que representa a las armas

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17
 MAP_FILES = ../src/Model/terrain_map.cpp ../src/Model/block_position.cpp ../src/Model/path_node.cpp
 MOV_FILES = ../src/Model/movable.cpp ../src/Model/teamable.cpp
 
-all: test_block_position test_path_node test_terrain_map test_terrain_mobility test_light_infantry
+all: test_block_position test_path_node test_terrain_map test_terrain_mobility test_light_infantry test_weapons
 
 test_block_position: block_position_test.cpp ../src/Model/block_position.cpp
 	g++ $(CFLAGS) -o block_position.test block_position_test.cpp ../src/Model/block_position.cpp
@@ -18,6 +18,9 @@ test_terrain_map: terrain_map_test.cpp $(MAP_FILES) ../src/Model/infantry_mobili
 
 test_light_infantry: light_infantry_test.cpp ../src/Model/light_infantry.cpp ../src/Model/infantry_mobility.cpp $(MOV_FILES) $(MAP_FILES)
 	g++ $(CFLAGS) -o light_inf.test light_infantry_test.cpp ../src/Model/light_infantry.cpp ../src/Model/infantry_mobility.cpp $(MOV_FILES) $(MAP_FILES)
+
+test_weapons: weapon_test.cpp ../src/Model/weapon.cpp ../src/Model/assault_rifle.cpp
+	g++ $(CFLAGS) -o weapon.test weapon_test.cpp ../src/Model/weapon.cpp ../src/Model/assault_rifle.cpp
 
 test_control_unit: control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
 	g++ $(CFLAGS) -o control_unit.test control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
