--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -4,5 +4,5 @@ project(Editor)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(SFML COMPONENTS system window graphics network audio)
-add_executable(Editor main.cpp Button.cpp textBox.cpp textBox.h EditorMenu.cpp EditorMenu.h camera.cpp ground.cpp)
+add_executable(Editor main.cpp Button.cpp textBox.cpp textBox.h EditorMenu.cpp EditorMenu.h camera.cpp ground.cpp Editor.cpp Editor.h)
 target_link_libraries(Editor sfml-graphics sfml-window sfml-system sfml-audio)
