Refactor grande: Modifico la interfaz de Teamable Creo una clase Unit que representa Teamables que pueden atacar y moverse Creo una clase Tank que hereda de Unit Quedan bugs en la parte del ataque pero compila LightInfantry esta roto en este commit

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,9 @@
 CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17
 MAP_FILES = ../src/Model/terrain_map.cpp ../src/Model/block_position.cpp ../src/Model/path_node.cpp
+UNIT_FILES = ../src/Model/unit.cpp ../src/Model/teamable.cpp ../src/Model/weapon.cpp
 MOV_FILES = ../src/Model/movable.cpp ../src/Model/teamable.cpp
 
-all: test_block_position test_path_node test_terrain_map test_terrain_mobility test_light_infantry test_weapons
+all: test_block_position test_path_node test_terrain_map test_terrain_mobility test_tank test_weapons
 
 test_block_position: block_position_test.cpp ../src/Model/block_position.cpp
 	g++ $(CFLAGS) -o block_position.test block_position_test.cpp ../src/Model/block_position.cpp
@@ -21,6 +22,9 @@ test_light_infantry: light_infantry_test.cpp ../src/Model/light_infantry.cpp ../
 
 test_weapons: weapon_test.cpp ../src/Model/weapon.cpp ../src/Model/assault_rifle.cpp
 	g++ $(CFLAGS) -o weapon.test weapon_test.cpp ../src/Model/weapon.cpp ../src/Model/assault_rifle.cpp
+
+test_tank: tank_test.cpp ../src/Model/tank.cpp ../src/Model/cannon.cpp ../src/Model/vehicle_mobility.cpp $(UNIT_FILES) $(MAP_FILES)
+	g++ $(CFLAGS) -o tank.test tank_test.cpp ../src/Model/tank.cpp ../src/Model/cannon.cpp ../src/Model/vehicle_mobility.cpp $(UNIT_FILES) $(MAP_FILES)
 
 test_control_unit: control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
 	g++ $(CFLAGS) -o control_unit.test control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
