--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,10 @@
 CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17
 MAP_FILES = ../src/Model/terrain_map.cpp ../src/Model/block_position.cpp ../src/Model/path_node.cpp
 UNIT_FILES = ../src/Model/unit.cpp ../src/Model/teamable.cpp ../src/Model/Weapons/weapon.cpp
+INFANTRY_FILES = ../src/Model/light_infantry.cpp ../src/Model/Mobility/infantry_mobility.cpp
+VEHICLE_FILES = ../src/Model/tank.cpp ../src/Model/Mobility/vehicle_mobility.cpp
+WEAPON_FILES = ../src/Model/Weapons/assault_rifle.cpp ../src/Model/Weapons/cannon.cpp
+SRV_FILES = ../src/Server/mock_server.cpp ../src/Server/control_unit.cpp ../src/Server/entity_factory.cpp ../src/Server/configuration_loader.cpp
 
 all: test_block_position test_path_node test_terrain_map test_terrain_mobility test_tank test_light_infantry test_weapons
 
@@ -24,6 +28,9 @@ test_weapons: weapon_test.cpp ../src/Model/Weapons/weapon.cpp ../src/Model/Weapo
 
 test_tank: tank_test.cpp ../src/Model/tank.cpp ../src/Model/Weapons/cannon.cpp ../src/Model/Mobility/vehicle_mobility.cpp $(UNIT_FILES) $(MAP_FILES) ../src/Server/configuration_loader.cpp
 	g++ $(CFLAGS) -o tank.test tank_test.cpp ../src/Model/tank.cpp ../src/Model/Weapons/cannon.cpp ../src/Model/Mobility/vehicle_mobility.cpp $(UNIT_FILES) $(MAP_FILES) ../src/Server/configuration_loader.cpp
+
+test_srv: mock_server_test.cpp $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES)
+	g++ $(CFLAGS) -o srv.test mock_server_test.cpp $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES)
 
 test_control_unit: control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
 	g++ $(CFLAGS) -o control_unit.test control_unit_test.cpp ../src/Server/control_unit.cpp $(MOV_FILES) $(MAP_FILES)
