--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_AUTOMOC ON)
 
 find_package(SFML COMPONENTS system window graphics network audio)
 add_executable(Editor main.cpp Button.cpp textBox.cpp textBox.h EditorMenu.cpp EditorMenu.h camera.cpp ground.cpp Editor.cpp Editor.h StateSaver.cpp StateSaver.h
-        editormainwindow.cpp ui_editormainwindow.h editormainwindow.h MapLoader.cpp MapLoader.h ConstructionCenter.cpp ConstructionCenter.h)
+        editormainwindow.cpp ui_editormainwindow.h editormainwindow.h MapLoader.cpp MapLoader.h ConstructionCenter.cpp ConstructionCenter.h Constants.h)
 
 find_package(yaml-cpp REQUIRED)
 find_package(Qt5 COMPONENTS
