agrego tanque y mejoro funciones

--- a/src/Client-Model/Makefile
+++ b/src/Client-Model/Makefile
@@ -1,9 +1,15 @@
-CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17 
+CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17
 LIBS=-lsfml-graphics -lsfml-window -lsfml-system
 MAP_FILES = ../Model/terrain_map.cpp ../Model/block_position.cpp ../Model/path_node.cpp
-MOV_FILES = ../Model/movable.cpp ../Model/infantry_mobility.cpp
-SRV_FILES = ../Server/mock_server.cpp ../Server/control_unit.cpp
-CLIENT_FILES = client_class.cpp common_camera.cpp common_game_screen.cpp common_ground.cpp common_model.cpp common_protocol.cpp common_trike.cpp common_unit.cpp common_pointer.cpp common_selector.cpp
+UNIT_FILES = ../Model/unit.cpp ../Model/teamable.cpp ../Model/Weapons/weapon.cpp
+INFANTRY_FILES = ../Model/light_infantry.cpp ../Model/Mobility/infantry_mobility.cpp
+VEHICLE_FILES = ../Model/tank.cpp ../Model/Mobility/vehicle_mobility.cpp
+WEAPON_FILES = ../Model/Weapons/assault_rifle.cpp ../Model/Weapons/cannon.cpp
+SRV_FILES = ../Server/mock_server.cpp ../Server/control_unit.cpp ../Server/entity_factory.cpp ../Server/configuration_loader.cpp
+CLIENT_FILES = client_class.cpp common_camera.cpp common_game_screen.cpp common_ground.cpp common_model.cpp common_protocol.cpp common_pointer.cpp common_selector.cpp common_frames.cpp 
+UNITS_FILES = common_trike.cpp common_unit.cpp common_tank.cpp
 
-client: client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(MOV_FILES) $(MAP_FILES)
-	g++ $(CFLAGS) -o client client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(MOV_FILES) $(MAP_FILES) $(LIBS)
+
+client: client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES)
+	g++ $(CFLAGS) -o client client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES) $(LIBS)
+
