modifico cosas botones y agrego fuincionalidad

--- a/src/Client-Model/Makefile
+++ b/src/Client-Model/Makefile
@@ -6,7 +6,7 @@ INFANTRY_FILES = ../Model/light_infantry.cpp ../Model/Mobility/infantry_mobility
 VEHICLE_FILES = ../Model/tank.cpp ../Model/Mobility/vehicle_mobility.cpp
 WEAPON_FILES = ../Model/Weapons/assault_rifle.cpp ../Model/Weapons/cannon.cpp
 SRV_FILES = ../Server/mock_server.cpp ../Server/control_unit.cpp ../Server/entity_factory.cpp ../Server/configuration_loader.cpp
-CLIENT_FILES = client_class.cpp common_camera.cpp common_game_screen.cpp common_ground.cpp common_model.cpp common_protocol.cpp common_pointer.cpp common_selector.cpp common_frames.cpp Button.cpp Button.h ConstructionMenu.cpp ConstructionMenu.h BuildingImageHandler.cpp BuildingImageHandler.h UnitImageHandler.cpp UnitImageHandler.h VehicleImageHandler.cpp VehicleImageHandler.h  
+CLIENT_FILES = client_class.cpp common_camera.cpp common_game_screen.cpp common_ground.cpp common_model.cpp common_protocol.cpp common_pointer.cpp common_selector.cpp common_frames.cpp Button.cpp Button.h ConstructionMenu.cpp ConstructionMenu.h BuildingImageHandler.cpp BuildingImageHandler.h UnitImageHandler.cpp UnitImageHandler.h VehicleImageHandler.cpp VehicleImageHandler.h  UnitButton.h UnitButton.cpp
 UNITS_FILES = common_tank.cpp common_trike.cpp common_unit.cpp 
 WEAPONS_FILES = common_assault.cpp common_canyon.cpp
 
