Agrego trike al makefile de tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -Werror -pedantic -pedantic-errors -std=c++17
 MAP_FILES = ../src/Model/Map/terrain_map.cpp ../src/Model/Map/block_position.cpp ../src/Model/Map/path_node.cpp
 UNIT_FILES = ../src/Model/Entities/unit.cpp ../src/Model/Entities/teamable.cpp ../src/Model/Weapons/weapon.cpp
 INFANTRY_FILES = ../src/Model/Entities/light_infantry.cpp ../src/Model/Mobility/infantry_mobility.cpp
-VEHICLE_FILES = ../src/Model/Entities/tank.cpp ../src/Model/Mobility/vehicle_mobility.cpp
+VEHICLE_FILES = ../src/Model/Entities/tank.cpp ../src/Model/Entities/trike.cpp ../src/Model/Mobility/vehicle_mobility.cpp
 WEAPON_FILES = ../src/Model/Weapons/assault_rifle.cpp ../src/Model/Weapons/cannon.cpp
 BUILDING_FILES = ../src/Model/Entities/building.cpp ../src/Model/Entities/teamable.cpp ../src/Model/Map/block_position.cpp ../src/Server/configuration_loader.cpp
 SRV_FILES = ../src/Server/mock_server.cpp ../src/Server/control_unit.cpp ../src/Server/entity_factory.cpp ../src/Server/configuration_loader.cpp
