--- a/src/Client-Model/Makefile
+++ b/src/Client-Model/Makefile
@@ -10,10 +10,9 @@ SRV_FILES = ../Server/mock_server.cpp ../Server/control_unit.cpp ../Server/entit
 CLIENT_FILES = client_class.cpp common_camera.cpp common_game_screen.cpp common_ground.cpp common_model.cpp common_explosion.cpp  common_protocol.cpp common_pointer.cpp common_selector.cpp common_frames.cpp Button.cpp Button.h ConstructionMenu.cpp ConstructionMenu.h BuildingImageHandler.cpp BuildingImageHandler.h UnitImageHandler.cpp UnitImageHandler.h VehicleImageHandler.cpp VehicleImageHandler.h  UnitButton.h UnitButton.cpp
 UNITS_FILES = common_tank.cpp common_trike.cpp common_unit.cpp 
 WEAPONS_FILES = common_assault.cpp common_canyon.cpp
-BUILDS_FILES = common_build.cpp common_windtrap.cpp
 
 
 
-client: client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES) $(WEAPONS_FILES) $(BUILDS_FILES)
-	g++ $(CFLAGS) -o client client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES) $(LIBS) $(WEAPONS_FILES) $(BUILDS_FILES)
+client: client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES) $(WEAPONS_FILES) 
+	g++ $(CFLAGS) -o client client_main.cpp $(CLIENT_FILES) $(SRV_FILES) $(INFANTRY_FILES) $(VEHICLE_FILES) $(WEAPON_FILES) $(UNIT_FILES) $(MAP_FILES) $(UNITS_FILES) $(LIBS) $(WEAPONS_FILES)
 
