--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,12 @@
         "utility": "cpp",
         "bit": "cpp",
         "set": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp",
+        "ratio": "cpp",
+        "thread": "cpp"
     }
 }
